--- a/node/Dwitter/server/package.json
+++ b/node/Dwitter/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-async-error": "^0.0.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0"
   },
