--- a/node/Dwitter/server/package.json
+++ b/node/Dwitter/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
+    "sequelize": "^6.33.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
