--- a/node/Dwitter/server/package.json
+++ b/node/Dwitter/server/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0",
